# plastic-surgery

./: .gitattributes  .lfsconfig  README.md  mkdocs.yaml  pyproject.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/mise/: config.toml
.github/workflows/: mega-linter.yaml  release.yaml
exp/2025/08/31/clean-ct/data/: 00-XYZ_ReadyToSculpt_eyesClosed_GEO_PolyGroups.landmarks.json  00-sculptor-cranium.landmarks.json  00-sculptor-mandible.landmarks.json  20-template-cranium.vtp  20-template-mandible.vtp
exp/2025/08/31/clean-ct/data/11-surface/7028417719/2014-03-03/: skull.ply
exp/2025/08/31/clean-ct/data/11-surface/7028417719/2016-11-22/: skull.ply
exp/2025/08/31/clean-ct/data/11-surface/7033231985/2016-10-18/: skull.ply
exp/2025/08/31/clean-ct/data/11-surface/7033231985/2016-10-24/: skin.ply  skull.ply
exp/2025/08/31/clean-ct/data/11-surface/7033231985/2017-09-28/: skull.ply
exp/2025/08/31/clean-ct/data/11-surface/7036866897/2016-08-25/: skull.ply
exp/2025/08/31/clean-ct/data/21-registration/: dataset.json
exp/2025/08/31/clean-ct/src/: 11-extract-surface.py  12-find-closest-patient.py  20-mask-floating.py
exp/2025/08/31/fiber/data/: 00-mandible.vtp  00-tetmesh.vtu  10-solution.vtu  10-tetmesh.vtu
exp/2025/08/31/fiber/src/: 10-gen.py  20-simulate.py
exp/2025/08/31/predict/data/: 00-post-cranium.vtp  00-post-skin.vtp  00-pre-skin.vtp  10-pre-mandible.vtp  10-tetmesh.vtu  20-prediction.vtu  21-evaluation.vtp
exp/2025/08/31/predict/src/: 13-gen-props.py  20-simulate.py  21-evaluate.py
exp/2025/11/20/clean-ct/data/: 00-XYZ_ReadyToSculpt_eyesClosed_GEO_PolyGroups.landmarks.json  00-XYZ_ReadyToSculpt_eyesOpen_PolyGroups_GEO.landmarks.json  00-sculptor-cranium.landmarks.json  00-sculptor-cranium.ply  00-sculptor-mandible.landmarks.json  00-sculptor-mandible.ply
exp/2025/11/20/clean-ct/data/20-registration/7059916661/: post-cranium.ply  post-mandible.ply  post-skin.ply  post-skin.vtp  pre-cranium.ply  pre-mandible.ply  pre-skin.ply  pre-skin.vtp
exp/2025/11/20/clean-ct/data/21-registration/: dataset.json
exp/2025/11/20/clean-ct/data/21-registration/7059916661/: post-mandible.vtp  pre-cranium.vtp
exp/2025/11/20/clean-ct/src/: 10-clean-ct.py  11-extract-surface.py  20-registration.py  21-registration.py
exp/2025/11/20/predict/data/: 11-pre-mandible.vtp  13-tetmesh.vtu
exp/2025/11/20/predict/src/: 10-mask-mandible.py  10-tetgen.py  11-mask-osteotomy.py  12-gen-masks.py
src/liblaf/plastic_surgery/: __init__.pyi  _meta.py  _reader.py
(+151 files in other folders)
